// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`angular scenario 1`] = `
Object {
  "emited": Array [
    Array [
      Object {
        "firstBarMessage": "LINT ACTION",
        "hasDecorations": false,
        "secondBarMessage": undefined,
        "thirdBarMessage": " whole/whole.component.html",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "NO ACTION",
        "hasDecorations": false,
        "secondBarMessage": undefined,
        "thirdBarMessage": "helpers/foo.spec.ts",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "LINT ACTION",
        "hasDecorations": false,
        "secondBarMessage": undefined,
        "thirdBarMessage": " src/styles.scss",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "LINT ACTION",
        "hasDecorations": false,
        "secondBarMessage": undefined,
        "thirdBarMessage": " helpers/foo.ts",
      },
    ],
    Array [
      Object {
        "firstBarMessage": "LINT ACTION",
        "hasDecorations": false,
        "secondBarMessage": undefined,
        "thirdBarMessage": " src/styles.scss",
      },
    ],
  ],
  "linted": Array [
    "/home/s/repos/rambda-docs/src/app/whole/whole.component.html",
    "/home/s/repos/rambda-docs/src/styles.scss",
    "/home/s/repos/rambda-docs/src/styles.scss",
  ],
}
`;

exports[`with angular source - force lint 1`] = `
Array [
  Object {
    "firstBarMessage": "LINT ACTION",
    "hasDecorations": false,
    "secondBarMessage": undefined,
    "thirdBarMessage": " helpers/foo.ts",
  },
]
`;
